--- a/app/src/main/res/layout/fragment_multi_city.xml
+++ b/app/src/main/res/layout/fragment_multi_city.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -10,11 +11,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
-        <include layout="@layout/multi_city_form" />
+
+        <include
+            layout="@layout/multi_city_form" />
+
         <include
             android:id="@+id/btn_add_flight"
             layout="@layout/button_add_another_flight" />
-        <include layout="@layout/passenger_and_cabin_card" />
+
+        <include
+            layout="@layout/passenger_and_cabin_card" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
