--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="tertiary_color">#A4E0FF</color>
     <color name="quaternary_color">#1e90ff</color>
     <color name="green">#18AF5E</color>
+    <color name="background_color">#e3eeff</color>
 </resources>
