--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -8,7 +8,7 @@
     tools:context=".presentation.homepage.HomePageFragment">
 
     <include
-        android:id="@+id/include"
+        android:id="@+id/include_toolbar"
         layout="@layout/toolbar_home"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -25,7 +25,7 @@
         app:layout_constraintBottom_toTopOf="@+id/include_bottom_navigation"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include">
+        app:layout_constraintTop_toBottomOf="@+id/include_toolbar">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -84,7 +84,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/layout_departure"
+                        android:id="@+id/cl_departure"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
@@ -146,7 +146,7 @@
                             android:layout_marginTop="8dp"
                             android:maxEms="8"
                             android:maxLines="2"
-                            android:text="@string/tv_yogyakarta_city"
+                            android:text="@string/tv_departure_city_name_label"
                             android:textSize="12sp"
                             android:textColor="@color/white"
                             app:layout_constraintStart_toStartOf="parent"
@@ -155,7 +155,7 @@
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <androidx.constraintlayout.widget.ConstraintLayout
-                        android:id="@+id/layout_arrive"
+                        android:id="@+id/cl_arrive"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
@@ -218,7 +218,7 @@
                             android:layout_marginTop="8dp"
                             android:maxEms="8"
                             android:maxLines="2"
-                            android:text="@string/tv_balikpapan_city"
+                            android:text="@string/tv_arrive_city_name_label"
                             android:textAlignment="textEnd"
                             android:textColor="@color/white"
                             android:textSize="12sp"
@@ -240,7 +240,7 @@
                         app:cornerRadius="8dp"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/layout_departure" />
+                        app:layout_constraintTop_toBottomOf="@+id/cl_departure" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.cardview.widget.CardView>
