--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="quaternary_color">#1e90ff</color>
     <color name="green">#18AF5E</color>
     <color name="background_color">#e3eeff</color>
+    <color name="silver_chalice">#9e9e9e</color>
 </resources>
