--- a/core/src/main/res/drawable/custom_cl_class_true.xml
+++ b/core/src/main/res/drawable/custom_cl_class_true.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white" />
+    <solid android:color="@color/onahau" />
     <corners android:radius="4dp" />
-    <stroke
-        android:width="1dp"
-        android:color="@color/neutral" />
     <padding
         android:bottom="12dp"
         android:left="12dp"
